# pseudocraft

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/glad/: glad.h
res/shaders/: blue.shader  cube.shader
res/textures/: credits.txt
src/: glad.c  main.cpp
src/core/: application.cpp  application.h  input.cpp  input.h  log.cpp  log.h
src/graphics/: graphics.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
